--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.30.1",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "server": "^1.0.38",
